@@ -1,5 +1,10 @@
 2008-04-01  Pavel Roskin  <proski@gnu.org>
 
+	* util/grub-fstest.c (cmd_cmp): Use fseeko(), not fseek().  The
+	later is obsolete, potentially dangerous and sets a bad example.
+	* util/i386/efi/grub-mkimage.c (make_header): Likewise.
+	* util/misc.c (grub_util_get_image_size): Likewise.
+
 	* disk/loopback.c (options): Improve help for "--partitions".
 
 	* normal/arg.c (grub_arg_show_help): Fix spacing of the long
